<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="change_mood_fragment_positive_button" type="id"></item>


</resources>

